--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,52 @@
-body {
+html,body {
+  font-family: "Open sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.wrapper{
+  max-width: 1400px;
+  margin: 0;
+  text-align:center;
+  align-items:baseline;
+  justify-content:space-evenly;
+}
+header{
+  line-height: 10px;
+}
+header .wrapper{
+  background-color: #777777;
+  color: #dadada;
+  display: flex;
+}
+/*  Flexbox usado no navbar */
+header nav{
+  background-color: #777777;
+  color: #dadada;
+  font-size: 20px;
+  font-weight: 200;
+}
+header nav a{
+  background-color: #777777;
+  color: #dadada;
+  margin-left: 20px;
+  text-decoration: none;
+}
+header h1{
+  background-color: #777777;
+  color: #dadada;
+  margin:10px;
+}
+content .banner{
+  background-color: #777777;
+  color: #dadada;  
+}
+content .banner h2{
+  list-style: none;
+  margin: 0;
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
-}
+
+
+
