--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,34 @@
-<%- include('partials/header') %>
+<%- include('./partials/header') %>
 
 <content>
   <div class="banner">
+    
     <h2>Tagli describing your e-shop</h2>
-      <img src="images/banner.png" alt="Logo" />
-      <img src="images/banner.png" alt="Logo" />
-      <img src="images/banner.png" alt="Logo" />
+      <img src="../public/images/foto_01.png" alt="Logo" />
+      <img src="../public/images/foto_02.png" alt="Logo" />
+      <img src="../public/images/foto_03.png" alt="Logo" />
     <br></br>
-    <button type="button">Shop Now</button>
+    <button class="btn btn-primary">Shop Now</button>
   </div>
 
-  <div class="vitrine">
-    <h2>Featured Products</h2>
-    <div class="vitrine_container">
-      <a href="#">
-       <img src="images/banner.png" alt="Logo" />
-       <p>PRODUTO NAME
-       <span class="preco">$300</span></p>
-      </a>
-      <a href="#">
-        <img src="images/banner.png" alt="Logo" />
-        <p>PRODUTO NAME
-        <span class="preco">$300</span></p>
-      </a>
+  
+  <div class="container">
+    <div class="row">
+      <h1>Featured Products</h1>
+    </div>
+    <div class="row">
+      
+      <div class="col-sm4">
+        <div class="card">
+          <div class="cover-image card-img-top"></div>
+          <img src="..." alt=""/>
+          <div class="card-body">
+            <h6 class="card-title"></h6>
+            <p class="card-text">
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -35,7 +41,7 @@
     </div>
     <div class="item3">             
       <input type="email" id="email" name="email">
-      <label for="email"><button>submit</button></label>
+      <label for="email"><button class="btn btn-primary">Subscribe</button></label>
     </div>
   </div>
 
@@ -43,7 +49,7 @@
 <div class="produto1">
     <div class="card1">
       <a href="#">
-        <img src="images/cards 1.png" alt="logo">
+        <img src="../public/images/no-img.jpg" alt="logo">
         <p>PRODUTO NAME</p>
         <span class="preco">$300</span>
       </a>
@@ -51,7 +57,7 @@
   <div class="produto2">
     <div class="card2">
       <a href="#">
-        <img src="images/cards 2.png" alt="logo">
+        <img src="../public/images/no-img.jpg" alt="logo">
         <p>PRODUTO NAME</p>
         <span class="preco">$300</span>
       </a>
@@ -59,7 +65,7 @@
   
     <div class="card2">
       <a href="#">
-        <img src="images/cards 3.png" alt="logo">
+        <img src="../public/images/noImage.png" alt="logo">
         <p>PRODUTO NAME</p>
         <span class="preco">$300</span>
       </a>
@@ -77,7 +83,7 @@
   
     <div class="card2">
       <a href="#">
-        <img src="images/cards 5.png" alt="logo">
+        <img src="../public/images/foto_03.png" alt="logo">
         <p>PRODUTO NAME</p>
         <span class="preco">$300</span>
       </a>
@@ -86,15 +92,20 @@
 
 </div>
 
-  <div class="descricao">
-    <h2>About Your Shop</h2>
-    <p>Lorem Ipsum is Lorem Ipsum and is considered to be of
-      importance and useful for diagnostic purposes
-    </p>
-  </div>
-
+<div class="descricao">
+  <h2>About Your Shop</h2>
+  <p>Lorem Ipsum is Lorem Ipsum and is considered to be of
+    importance and useful for diagnostic purposes
+  </p>
+</div>
 
 </content>
     
-<%- include('partials/footer') %>
+
+
+
+<%- include('./partials/footer') %>
+
+
+
 
